--- a/wayzi-frontend/src/ui/styles/rides.css
+++ b/wayzi-frontend/src/ui/styles/rides.css
@@ -34,7 +34,7 @@
 
 .ride-card:hover {
     /*transform: translate(0, 3px);*/
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2) !important;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
     z-index: 30;
 }
 
